# VSA

./: .dockerignore  .editorconfig  .gitignore  CLAUDE.md  Makefile  README.md
.cursor/rules/: my-custom-rules.mdc  my.custom.rules.mdc  vsa-cursor-rule.mdc
.github/workflows/: ci.yml
apps/vps-admin-api/: Dockerfile  README.md  alembic.ini  pyproject.toml
apps/vps-admin-api/alembic/: env.py
apps/vps-admin-api/alembic/versions/: 0001_initial_tables.py  0002_traffic_stats.py
apps/vps-admin-api/src/vsa_api/: __init__.py  config.py  main.py
apps/vps-admin-api/src/vsa_api/db/: session.py  tables.py
apps/vps-admin-api/src/vsa_api/routers/: agent.py  audit_logs.py  certs.py  containers.py  domains.py  stacks.py  traffic.py  vps.py
apps/vps-admin-api/src/vsa_api/services/: loki.py
apps/vps-admin-cli/: README.md  pyproject.toml
apps/vps-admin-cli/src/vsa/: __init__.py  audit.py  cli.py  config.py  errors.py
apps/vps-admin-cli/src/vsa/commands/: __init__.py  agent.py  auth.py  bootstrap.py  cert.py  site.py  stack.py  vhost.py  vps.py
apps/vps-admin-cli/src/vsa/models/: __init__.py
apps/vps-admin-cli/src/vsa/services/: __init__.py  agent_sync.py  certbot.py  docker.py  htpasswd.py  network.py  nginx.py  vhost_renderer.py
apps/vps-admin-cli/src/vsa/templates/: vhost_http.conf.j2  vhost_https.conf.j2
apps/vps-admin-cli/tests/: conftest.py  test_agent_sync.py  test_audit.py  test_config.py  test_htpasswd.py  test_models.py  test_vhost_renderer.py
apps/vps-admin-ui/: Dockerfile  README.md  next.config.js  package.json  pnpm-lock.yaml
docs/: architecture.md  low-level-design.md  ssl-certificate-system-analysis.md
docs/ADRs/: .gitkeep  001-cli-replaces-bash-scripts.md  002-jinja2-vhost-templates.md  003-dual-write-audit-logging.md  004-hub-and-agent-multi-vps.md
docs/runbooks/: provision_site.md  (+1 more)
(+73 files in other folders)
