[project]
name = "vsa-api"
version = "0.1.0"
description = "FlowBiz VSA Dashboard API — container, domain, and audit management"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "sqlalchemy[asyncio]>=2.0,<3.0",
  "asyncpg>=0.30,<1.0",
  "alembic>=1.14,<2.0",
  "pydantic>=2.0,<3.0",
  "pydantic-settings>=2.0,<3.0",
  "httpx>=0.27,<1.0",
  "docker>=7.0,<8.0",
  "vsa-common",
]

[project.scripts]
vsa-api = "vsa_api.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vsa_api"]

[tool.uv.sources]
vsa-common = { path = "../../packages/python/vsa-common", editable = true }

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
