[project]
name = "vsa-cli"
version = "0.1.0"
description = "FlowBiz VPS Admin CLI — unified tooling for multi-tenant hosting"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12,<1.0",
  "rich>=13.0,<14.0",
  "pydantic>=2.0,<3.0",
  "jinja2>=3.1,<4.0",
  "bcrypt>=4.0,<5.0",
  "httpx>=0.27,<1.0",
  "vsa-common",
]

[project.scripts]
vsa = "vsa.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vsa"]

[tool.uv.sources]
vsa-common = { path = "../../packages/python/vsa-common", editable = true }

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]
